--- a/package.json
+++ b/package.json
@@ -3,11 +3,19 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "test:unit": "jest"
     },
     "devDependencies": {
+        "@babel/preset-env": "^7.26.9",
         "@vitejs/plugin-vue": "^5.2.1",
+        "@vue/test-utils": "^2.4.6",
+        "@vue/vue3-jest": "^29.2.6",
         "axios": "^1.6.4",
+        "babel-jest": "^29.7.0",
+        "jest": "^29.7.0",
+        "jest-environment-jsdom": "^29.7.0",
+        "jest-vue-preprocessor": "^1.7.1",
         "laravel-vite-plugin": "^1.0.0",
         "vite": "^5.0.0"
     },
@@ -16,5 +24,25 @@
         "vue": "^3.5.13",
         "vue-axios": "^3.5.2",
         "vue-router": "^4.5.0"
+    },
+    "jest": {
+        "testEnvironment": "jsdom",
+        "testEnvironmentOptions": {
+            "customExportConditions": [
+                "node",
+                "node-addons"
+            ]
+        },
+        "moduleNameMapper": {
+            "^vue$": "vue/dist/vue.common.js"
+        },
+        "moduleFileExtensions": [
+            "js",
+            "vue"
+        ],
+        "transform": {
+            "^.+.js$": "<rootDir>/node_modules/babel-jest",
+            ".*.(vue)$": "<rootDir>/node_modules/jest-vue-preprocessor"
+        }
     }
 }
